# HighPerfomanceComputingHomeworks

./: CMakeLists.txt
hw1_introduction_to_hpc/: CMakeLists.txt  Readme.md
hw1_introduction_to_hpc/MatrixLibrary/: Matrix.cpp  Matrix.h  MatrixMultiplier.cpp  MatrixMultiplier.h
hw1_introduction_to_hpc/TimeMeasurer/: CMakeLists.txt  main.cpp
hw1_introduction_to_hpc/bash_scripts/: 2.sh  3.sh
hw1_introduction_to_hpc/linpack_test/: Result.md
hw2_cblas/: CMakeLists.txt  Readme.md
hw2_cblas/MatrixLibrary/: CMakeLists.txt  Matrix.cpp  Matrix.h
hw2_cblas/TimeMeasurer/: main.cpp
hw2_cblas/bash_scripts/: 1.sh  4.sh
hw2_cblas/linpack_test/: my_test
hw3_omp/: CMakeLists.txt  MonteCarlo.cpp
hw3_omp/Jacobi/: Axisb.cpp  CMakeLists.txt  Readme.md
hw3_omp/Jacobi/LinearSystemsLibrary/: CMakeLists.txt  JacobiSolver.cpp  JacobiSolver.h  LinearSystem.cpp  LinearSystem.h
hw3_omp/Jacobi/MatrixLibrary/: Matrix.h  MatrixMultiplier.h
hw3_omp/LeastSquares/: CMakeLists.txt  LeastSquares.cpp  Readme.md
hw3_omp/MonteCarlo/: CMakeLists.txt  MonteCarlo.cpp  Readme.md
hw3_omp/fixing_of_bugs/: omp_bugparfoc.c  omp_bugreduction.c
hw4_pagerank/: CMakeLists.txt
hw4_pagerank/BinPower/: BinPower.cpp  CMakeLists.txt  Readme.md
hw4_pagerank/PageRank/: CMakeLists.txt  PageRank.cpp  Readme.md
hw4_pagerank/SimRank/: CMakeLists.txt  Readme.md  SimRank.cpp
hw5_mpi/: CMakeLists.txt
hw5_mpi/Acquaintance/: CMakeLists.txt  Readme.md  main.cpp
hw5_mpi/CellularAutomaton/: CMakeLists.txt  CellularAutomaton  Readme.md  main.cpp  plot.ipynb
hw6_cuda/: CMakeLists.txt  Readme.md
hw6_cuda/Histogram/: CMakeLists.txt  PlotHistograms.ipynb  Readme.md  b_hist.txt  g_hist.txt  main.cu  r_hist.txt
hw6_cuda/MedianFilter/: CMakeLists.txt  Readme.md  main.cu
hw6_cuda/SimpleFilter/: CMakeLists.txt  Readme.md  main.cu
